project PT. Mandiri Technology Sejahtera

--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
     </head>
     <body>
         <div class="template">
+
+            <div class="sidebare">
+                <div class="btn-close">
+                    <img src="./assets/icons/close.svg" alt="icon" id="btn-close">
+                </div>
+                <ul>
+                    <li>
+                        <a href="#HOME">HOME</a>
+                    </li>
+                    <li>
+                        <a href="#ABOUT">ABOUT US</a>
+                    </li>
+                    <li><a href="#PORTOFOLIO">PORTOFOLIOS</a></li>
+                    <li>
+                        <a href="#PRODUCTS">PRODUCTS</a>
+                    </li>
+                </ul>
+            </div>
+
             <div class="container-navbar5-mz5">
                 <div class="logo-navbar5-mz5">
                     <img
@@ -23,6 +42,11 @@
                         src="./assets/images/logo.jpg"
                         alt="logo"
                     />
+                </div>
+                <div class="btn-toggle" id="btn-toggle">
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </div>
                 <div class="content-navbar5-mz5">
                     <ul class="content1-navbar5-mz5">
@@ -82,7 +106,6 @@
             </div>
 
             <div class="section5-mz1" id="PORTOFOLIO">
-                <p class="p-section5-body-mz1">Assets</p>
                 <h1 class="title-section5-mz1">OUR PORTOFOLIO</h1>
                 <p class="p-section5-body-mz1">
                     Some of the best portfolios of our companies available today
