--- a/products.html
+++ b/products.html
@@ -26,6 +26,23 @@
     </head>
     <body>
         <div class="template">
+            <div class="sidebare">
+                <div class="btn-close">
+                    <img src="./assets/icons/close.svg" alt="icon" id="btn-close">
+                </div>
+                <ul>
+                    <li>
+                        <a href="./index.html">HOMEPAGE</a>
+                    </li>
+                    <li>
+                        <a href="./category.html">CATEGORIES</a>
+                    </li>
+                    <li>
+                        <a href="#list-product">LIST PRODUCTS</a>
+                    </li>
+                    <li><a href="#footer">CONTACT</a></li>
+                </ul>
+            </div>
             <div class="container-navbar5-mz5">
                 <div class="logo-navbar5-mz5">
                     <img
@@ -33,6 +50,11 @@
                         src="./assets/images/logo.jpg"
                         alt="logo"
                     />
+                </div>
+                <div class="btn-toggle" id="btn-toggle">
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </div>
                 <div class="content-navbar5-mz5">
                     <ul class="content1-navbar5-mz5">
