project PT. Mandiri Technology Sejahtera

--- a/products.html
+++ b/products.html
@@ -80,11 +80,85 @@
                         <div class="child-info">
                             <img src="./assets/icons/chevron.svg" alt="icon" id="rotateIcon" />
                         </div>
+                        <div class="child-info" id="block">
+                            <img src="./assets/icons/block.svg" alt="icon" />
+                        </div>
+                        <div class="child-info" id="grid">
+                            <img src="./assets/icons/grid.svg" alt="icon" />
+                        </div>
                     </div>
                 </div>
 
-                <div class="wrapper-list-products" id="list-product">
-                    <div class="child-product">
+                <div class="wrapper-list-products-block" id="list-product">
+                    <div class="child-product-block">
+                        <div class="child-product-left-block">
+                            <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
+                        </div>
+                        <div class="child-product-right-block">
+                            <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
+                            <h1>$100</h1>
+                            <small>CANON</small>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
+                                voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
+                            </p>
+                            <a href="./detail-product.html">
+                                <button class="btn-product">View Detail</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="child-product-block">
+                        <div class="child-product-left-block">
+                            <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
+                        </div>
+                        <div class="child-product-right-block">
+                            <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
+                            <h1>$100</h1>
+                            <small>CANON</small>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
+                                voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
+                            </p>
+                            <a href="./detail-product.html">
+                                <button class="btn-product">View Detail</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="child-product-block">
+                        <div class="child-product-left-block">
+                            <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
+                        </div>
+                        <div class="child-product-right-block">
+                            <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
+                            <h1>$100</h1>
+                            <small>CANON</small>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
+                                voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
+                            </p>
+                            <a href="./detail-product.html">
+                                <button class="btn-product">View Detail</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="child-product-block">
+                        <div class="child-product-left-block">
+                            <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
+                        </div>
+                        <div class="child-product-right-block">
+                            <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
+                            <h1>$100</h1>
+                            <small>CANON</small>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
+                                voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
+                            </p>
+                            <a href="./detail-product.html">
+                                <button class="btn-product">View Detail</button>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- <div class="child-product">
                         <div class="child-product-left">
                             <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
                         </div>
@@ -151,25 +225,9 @@
                                 <button class="btn-product">View Detail</button>
                             </a>
                         </div>
-                    </div>
-                    <div class="child-product">
-                        <div class="child-product-left">
-                            <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
-                        </div>
-                        <div class="child-product-right">
-                            <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
-                            <h1>$100</h1>
-                            <small>CANON</small>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
-                                voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
-                            </p>
-                            <a href="./detail-product.html">
-                                <button class="btn-product">View Detail</button>
-                            </a>
-                        </div>
-                    </div>
+                    </div> -->
                 </div>
+
             </div>
 
             <div class="footer-hdm" id="footer">
@@ -239,6 +297,7 @@
 
         <script src="./assets/js/navbar.js"></script>
         <script src="./assets/js/rotate.js"></script>
+        <script src="./assets/js/list.js"></script>
         <script>
             const menuContainer = document.querySelector(".bottom-exp");
             const leftButton = document.querySelector(".arrow-exp.left-exp");
