project PT. Mandiri Technology Sejahtera

--- a/detail-product.html
+++ b/detail-product.html
@@ -88,6 +88,10 @@
                     <p>CATEGORIES</p>
                 </a>
                 /
+                <a href="./products.html">
+                    <p>PRODUCTS</p>
+                </a>
+                /
                 <p>DETAIL-PRODUCT</p>
             </div>
             <div class="wrapper-detail-product">
