projectCV. Mandiri Technology Sejahtera

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="description" content="A System Integrator company established in September 2007 specializes in the development of IT network infrastructure and security systems." />
+        <meta
+            name="keywords"
+            content="Mandiri Technology Sejahtera, MTS, IT Support"
+        />
+        <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
         <meta name="language" content="en" />
-        <meta name="contributor" content="Nama Penyusun" />
-        <meta name="copyright" content="Tahun Hak Cipta, Pemilik Hak Cipta" />
+        <meta name="contributor" content="CV. Mandiri Technology Sejahtera" />
+        <meta name="copyright" content="2021, Mandiri Technology Sejahtera" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
