projectCV. Mandiri Technology Sejahtera

--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="description" content="A System Integrator company established in September 2007 specializes in the development of IT network infrastructure and security systems." />
-        <meta
-            name="keywords"
-            content="Mandiri Technology Sejahtera, MTS, IT Support"
-        />
-        <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
-        <meta name="language" content="en" />
-        <meta name="contributor" content="CV. Mandiri Technology Sejahtera" />
-        <meta name="copyright" content="2021, Mandiri Technology Sejahtera" />
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+       
+        <!-- HTML Meta Tags -->
+        <title>Mandiri Technology Sejahtera</title>
+        <meta name="description" content="A System Integrator company established in September 2007 specializes in the development of IT network infrastructure and security systems.">
+
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://mandiri-technology-sejahtera.vercel.app/index.html">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Mandiri Technology Sejahtera">
+        <meta property="og:description" content="A System Integrator company established in September 2007 specializes in the development of IT network infrastructure and security systems.">
+        <meta property="og:image" content="https://raw.githubusercontent.com/khoirulhudaa/MTS/main/assets/images/logoIcon.png">
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="mandiri-technology-sejahtera.vercel.app">
+        <meta property="twitter:url" content="https://mandiri-technology-sejahtera.vercel.app/index.html">
+        <meta name="twitter:title" content="Mandiri Technology Sejahtera">
+        <meta name="twitter:description" content="A System Integrator company established in September 2007 specializes in the development of IT network infrastructure and security systems.">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/khoirulhudaa/MTS/main/assets/images/logoIcon.png">
+
+        <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+                
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="./assets/styles/navbar.css" />
         <link rel="stylesheet" href="./assets/styles/style.css" />
         <link rel="stylesheet" href="./assets/styles/footer.css" />
         <script src="./assets/js/counts.js"></script>
-        <title>MTS</title>
     </head>
     <body>
         <div class="template">
