--- a/category.html
+++ b/category.html
@@ -5,6 +5,7 @@
         <!-- HTML Meta Tags -->
         <title>Mandiri Technology Sejahtera</title>
         <meta name="description" content="A System Integrator company established in September 2007 specializes in the development of IT network infrastructure and security systems.">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Facebook Meta Tags -->
         <meta property="og:url" content="https://mandiri-technology-sejahtera.vercel.app/index.html">
