--- a/detail-product.html
+++ b/detail-product.html
@@ -53,11 +53,13 @@
             </div>
             <div class="container-navbar5-mz5">
                 <div class="logo-navbar5-mz5">
-                    <img
-                        loading="lazy"
-                        src="./assets/images/logo.jpg"
-                        alt="logo"
-                    />
+                    <a href="./index.html">
+                        <img
+                            loading="lazy"
+                            src="./assets/images/logo.jpg"
+                            alt="logo"
+                        />
+                    </a>
                 </div>
                 <div class="btn-toggle" id="btn-toggle">
                     <div></div>
