--- a/products.html
+++ b/products.html
@@ -52,13 +52,12 @@
             </div>
             <div class="container-navbar5-mz5">
                 <div class="logo-navbar5-mz5">
-                    <a href="./index.html">
-                        <img
-                            loading="lazy"
-                            src="./assets/images/logo.jpg"
-                            alt="logo"
-                        />
-                    </a>
+                    <img
+                        loading="lazy"
+                        src="./assets/images/logo.jpg"
+                        alt="logo"
+                        id="logo"
+                    />
                 </div>
                 <div class="btn-toggle" id="btn-toggle">
                     <div></div>
@@ -308,6 +307,15 @@
         <script src="./assets/js/rotate.js"></script>
         <script src="./assets/js/list.js"></script>
         <script>
+            // Temukan elemen gambar dengan ID "logo"
+            const logoImage = document.getElementById('logo');
+
+            // Tambahkan event listener untuk mengarahkan ke halaman lain saat gambar diklik
+            logoImage.addEventListener('click', function() {
+                // Mengarahkan ke halaman index.html
+                window.location.href = './index.html';
+            });
+
             const menuContainer = document.querySelector(".bottom-exp");
             const leftButton = document.querySelector(".arrow-exp.left-exp");
             const rightButton = document.querySelector(".arrow-exp.right-exp");
